// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de GifExpertApp should mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    Gif Searcher
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Lol"
      key="Lol"
    />
  </ol>
</Fragment>
`;

exports[`Prueba de GifExpertApp should mostrar una lista de categoría 1`] = `
<Fragment>
  <h2>
    Gif Searcher
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
